# rapidae

./: .gitignore  CITATION.cff  LICENSE  README.md  conf.py  mkdocs.yml  pyproject.toml  requirements.txt  test_aepy.py  test_aepy2.py  test_aepy3.py  test_aepy4.py  test_aepy5.py  test_aepy6.py
aepy/: __init__.py  conf.py
aepy/data/: datasets.py  preprocessing.py  utils.py
aepy/metrics/: cmapps_score.py  metric.py
data/: __init__.py  datasets.py  preprocessing.py  utils.py
docs/: changelog.md  examples.md  license.md  requirements.txt
examples/: 00_QUICKSTART_tutorial.ipynb  01_execute_from_source_code.ipynb  02_callbacks.ipynb  03_web_interface.ipynb  QUICKSTART_tutorial.ipynb  RVE_RUL.ipynb  START_HERE.ipynb  arrhythmia_vae.ipynb  beta_vae.ipynb  callbacks.ipynb  contractive_autoencoder.ipynb  cvae.ipynb  denoising_autoencoder.ipynb  execute_from_source_code.ipynb  ic_former.ipynb  mnist_conv_vae.ipynb  mnist_mlp_vae.ipynb  mnist_vq_vae.ipynb  rul_vae.ipynb  rvae_AF.ipynb  rve_RUL.ipynb  sparse_autoencoder.ipynb  test.py  test_aepy.py  test_aepy2.py  test_aepy3.py  test_aepy4.py  test_aepy5.py  test_aepy6.py  test_aepy7.py  test_aepy8.py  time_hvae.ipynb  time_vae.ipynb  vae.ipynb  vae_classifier.ipynb  vae_classifier_conv.ipynb  vae_classifier_rnn.ipynb  vae_regressor_rnn.ipynb  vq_vae.ipynb  vq_vae_mnist.ipynb  (+1 more)
metrics/: __init__.py  accuracy.py  cmapps_score.py  mean_squared_error.py  metric.py  r2_score.py
pipelines/: __init__.py  base.py  preprocess.py  training.py
rapidae/: __init__.py  conf.py
scripts/: gen_ref_pages.py  streamlit.py
(+106 files in other folders)
